AZUREUS CHANGELOG
---------

2004.11.xx | Azureus 2.2.0.1

CHANGE: Core | Support azureus.install.path parameter, used by new linux launcher script [Nolar]

BUGFIX: UI   | Old language files in user dir causing !missing! item texts [Nolar]




2004.10.31 | Azureus 2.2.0.0

FEATURE: Core | Disk cache [Parg]
FEATURE: Core | Ability to set IP type-of-service (TOS) field for outbound data [Nolar]
FEATURE: Core | Show current upload and download limits in status area [Parg]
FEATURE: Core | Locale selection - options to add in all defined encodings + show lax list [Parg]
FEATURE: Core | Change the incoming data port without restarting [Parg]
FEATURE: Core | Display "warning message" responses in announce replies [Parg]
FEATURE: Core | Added option for tracker to perform a connectability check to peers [Parg]
FEATURE: Core | Have message aggregation, for bandwidth savings/efficiency [Nolar] 
FEATURE: Core | Torrent HTTP urls now accepted as program command line parameter [Nolar]
FEATURE: Core | Option added to disable system tray [Parg]
FEATURE: Core | Concurrent hashing for >1 CPU [Parg]
FEATURE: Core | Added ability to not outward connect to a defined set of port numbers [Parg]
FEATURE: Core | SOCKS V4, V4a and V5 (no auth/user+password methods) support for outgoing data connections [Parg]
FEATURE: Core | Torrents created by Azureus now include .utf-8 fields [Parg]
FEATURE: Core | Dynamic piece request queue scaling [Gudy]
FEATURE: Core | Added torrent name to authentication dialog [Parg]
FEATURE: Core | Per-torrent upload speed limits [Nolar,Gudy]
FEATURE: Core | Ability to change the sound played on torrent completion added [Parg]
FEATURE: Core | Added session uptime to stats [Nolar]
FEATURE: UI   | 'Download' menu added with start/stop all + pause/resume options [Parg]
FEATURE: UI   | Table col sort order default option added, thanks to Charnobo! [Parg]
FEATURE: UI   | URL Downloader window now support to set-up referrer and saves last used referrers [Parg, Gudy]